<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.detail.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:contentDescription="@string/minus"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:src="@drawable/poster_bumblebee"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="normal"
                    app:backgroundTint="@android:color/white"
                    android:src="@drawable/ic_arrow_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"/>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="normal"
                    app:backgroundTint="@android:color/white"
                    android:src="@drawable/ic_favorite_border_dislike"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linear_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="450dp"
                android:background="@drawable/background_rounded_white"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/title"
                    android:textColor="@color/grey_dark"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/img_rate"
                    app:layout_constraintStart_toStartOf="@+id/linear_background"
                    app:layout_constraintTop_toTopOf="@+id/linear_background" />

                <TextView
                    android:id="@+id/tv_genre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/genre"
                    app:layout_constraintEnd_toStartOf="@id/img_rate"
                    app:layout_constraintStart_toStartOf="@id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                <ImageView
                    android:id="@+id/img_rate"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_circle_not_fill"
                    android:backgroundTint="@color/grey_dark"
                    android:contentDescription="@string/minus"
                    app:layout_constraintBottom_toBottomOf="@id/tv_genre"
                    app:layout_constraintEnd_toEndOf="@id/linear_background"
                    app:layout_constraintTop_toTopOf="@id/tv_title" />

                <TextView
                    android:id="@+id/tv_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/ten_percen"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/img_rate"
                    app:layout_constraintEnd_toEndOf="@+id/img_rate"
                    app:layout_constraintStart_toStartOf="@+id/img_rate"
                    app:layout_constraintTop_toTopOf="@+id/img_rate" />


                <TextView
                    android:id="@+id/label_tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/description"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@id/tv_genre"
                    app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:paddingBottom="10dp"
                    android:text="@string/description"
                    app:layout_constraintEnd_toEndOf="@+id/linear_background"
                    app:layout_constraintStart_toStartOf="@id/label_tv_description"
                    app:layout_constraintTop_toBottomOf="@id/label_tv_description" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linear_background" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>