<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_movies"
            android:icon="@drawable/ic_movie_white"
            android:title="@string/moviesEntity"/>

    <item
            android:id="@+id/navigation_tv_shows"
            android:icon="@drawable/ic_local_movies_white"
            android:title="@string/tv_shows"/>

    <item
            android:id="@+id/navigation_favorite"
            android:icon="@drawable/ic_favorite_like"
            android:title="@string/favorites"/>


</menu>
