<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.edsusantoo.bismillah.moviecatalogue.ui.home.favorites.movies.MoviesFavoriteFragment">


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_favorites_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>
